--- a/django/templates/blog/post_add.html
+++ b/django/templates/blog/post_add.html
@@ -1,3 +1,23 @@
 {% extends 'base.html' %}
 
 {% block title %}Post add{% endblock %}
+
+
+
+
+{% block content %}
+    <form action="" method="POST">
+    {% csrf_token %}
+        <div class="form-group">
+            <label for="title">제목</label>
+            <input id="title" type="text" name="title" type="text" class="form-control" placeholder="글 제목">
+        </div>
+        <div class="form-group">
+            <label for="input-title">내용</label>
+            <textarea name="content" id="" class="form-control" cols="30" rows="10"></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary">작성하기</button>
+
+    </form>
+{% endblock %}
